--- a/configstore/package.json
+++ b/configstore/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "custom-comp",
+  "name": "configstore",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
